<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GymPhone</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_name"> Introduzca su nombre de usuario</string>
    <string name="login_pass"> Introduzca su contraseña </string>
    <string name="desp_logo"> Logo empresa </string>
    <string name="boton_login"> Ingresar </string>
    <string name="menu_titulo"> Menú </string>
    <string name="menu_perfil"> Perfil </string>
    <string name="menu_ejercicios"> Ejercicios </string>
    <string name="menu_rutinas"> Rutinas </string>
    <string name="menu_estadisticas"> Estadisticas </string>
    <string name="menu_ranking"> Rankings </string>
    <string name="menu_ayuda"> Ayuda </string>
    <string name="titulo_rutinas"> Tipos de Rutinas </string>
    <string name="rutinas_sistema">Rutinas del sistema </string>
    <string name="rutinas_propias">Rutinas creadas </string>
    <string name="salir"> Salir </string>
    <string name="perfil_titulo">Perfil de Usuario</string>
    <string name="perfil_peso">introduzca su peso</string>
    <string name="perfil_edad">introduzca su edad</string>
    <string name="perfil_estatura">introduzca su estatura</string>
    <string name="perfil_actualizar">Actualizar</string>
    <string name="ayuda_titulo">Ayuda</string>
    <string name="sistema_titulo">Rutinas del Sistema</string>
    <string name="creada_titulo">Rutinas de Creadas</string>
    <string name="ranking_titulo">Rutinas de Creadas</string>
    <string name="actualizar_titulo">Actualizar</string>
    <string name="actualizar_buscar">Buscar Actualizaciones ahora</string>
    <string name="actualizar_boton">Actualizar</string>
    <string name="titulo_menuejericios">Ejercicios</string>
    <string name="inicio">Inicio</string>
     <string name="detener">Detener</string>
    

</resources>