<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Title_ejercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_world" />

    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botondetener"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="Chronometer" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/chronometer1"
        android:layout_alignParentRight="true" >

        <TextView
            android:id="@+id/instrucciones"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/chronometer1"
            android:layout_alignLeft="@+id/ScrollView01"
            android:text="@string/hello_world"
            />
    </ScrollView>       
        
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/botondetener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/botoninicio"
        android:layout_alignBottom="@+id/botoninicio"
        android:layout_toRightOf="@+id/chronometer1"
        android:text="@string/detener" />

    <ImageView
        android:id="@+id/cargarimagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ScrollView01"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/botoninicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:layout_toLeftOf="@+id/chronometer1"
        android:text="@string/inicio" />

</RelativeLayout>