<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Title_ejercicioR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_world"
        android:textColor="#FF6600"
        android:textSize="18sp" />

    <Chronometer
        android:id="@+id/chronometer1R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botondetenerR"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="Chronometer" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/chronometer1R"
        android:layout_alignParentRight="true" >

        <TextView
            android:id="@+id/instruccionesR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/chronometer1R"
            android:layout_alignLeft="@+id/ScrollView01"
            android:text="@string/hello_world"
            android:textColor="#000000"
            />
    </ScrollView>       
        
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/botondetenerR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/botoninicioR"
        android:layout_alignBottom="@+id/botoninicioR"
        android:layout_toRightOf="@+id/chronometer1R"
        android:text="@string/detener"
        android:textColor="#333333" />

    <ImageView
        android:id="@+id/cargarimagenR"
        android:layout_width="wrap_content"
        android:layout_height="120sp"
        android:layout_above="@+id/ScrollView01"
        android:layout_below="@+id/Title_ejercicioR"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/Boton_adelante"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignBottom="@+id/botondetenerR"
        android:layout_alignRight="@+id/ScrollView01"
        android:src="@drawable/ic_btnsiguiente"
        android:onClick="irsiguiente" />

    <ImageButton
        android:id="@+id/Boton_atras"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignLeft="@+id/ScrollView01"
        android:layout_alignTop="@+id/botoninicioR"
        android:src="@drawable/ic_btnatras"
        android:onClick="iratras" />

    <Button
        android:id="@+id/botoninicioR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/Title_ejercicioR"
        android:text="@string/inicio"
        android:textColor="#333333" />
    
</RelativeLayout>